--- a/Projeto II/estilo.css
+++ b/Projeto II/estilo.css
@@ -1,17 +1,4 @@
-*{padding: 0;
-margin: 0; }
-
-@media screen and (max-width: 768px) {
-
-    .container {
-        flex-direction: column;
-    }
-
-    .text {
-        font-size: 16px;
-    }
-
-}
+body, ul { padding: 0; margin: 0; }
 
 .container {
     width: 100vw;
@@ -32,8 +19,60 @@ margin: 0; }
 }
 
 .item:hover {
-   flex-grow: 10;
+    flex-grow: 10;
     -webkit-filter: grayscale(0%);
     filter: grayscale(0%);
 }
 
+.item a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+}
+
+.text {
+    font-size: 0;
+    font-family: sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #fff;
+    text-decoration: none;
+    transition: all .5s ease-in-out;
+}
+
+.item:hover .text {
+    font-size: 32px;
+    text-shadow: 2px 2px 12px black;
+}
+
+.primeiro {
+    background-image: url(img/item1.png);
+}
+
+.segundo {
+    background-image: url(img/item2.png);
+}
+
+.terceiro {
+    background-image: url(img/item3.png);
+}
+
+.quarto {
+    background-image: url(img/item4.png);
+}
+
+@media screen and (max-width: 768px) {
+
+    .container {
+        flex-direction: column;
+    }
+
+    .text {
+        font-size: 16px;
+    }
+
+}
